Fix wrapping tooltip

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   position: absolute;
   max-width: 320px;
   transform: translate(-50%, 25px);
+  white-space: nowrap;
   padding: 5px;
   border-radius: 3px;
   font: 12px sans-serif;
